--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
-
 /* Your CSS Code here. */
+#job{
+	width:150px;
+	height:150;
+	background-color:#000000;
+}
+.hello-accio{
+	margin-left:32px;
+	padding:10px;
+	color:#ffffff;
+}
