--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 /* Your CSS Code here. */
 #job{
 	width:150px;
-	height:150;
+	height:150px;
 	background-color:#000000;
 }
 .hello-accio{
 	margin-left:32px;
-	padding:10px;
+	padding:10px 10px 10px 10px;
 	color:#ffffff;
 }
